--- a/index.html
+++ b/index.html
@@ -7,8 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-    
-    <section class="header">Hey! I'm Ani. I really love learning about math.</section>
+
+    <header>
+        <div class="logo">Your Logo</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="header">
+        <div>
+            Hey! I'm Ani.
+        </div>
+        <span class="delayed-text" style="visibility: hidden;">I really love learning about math.</span>
+    </section>
+
+    <div class="transparent-section">
+        Ever since I was in elementary school, I've loved trying to solve challenging puzzles and riddles. 
+        To this day, I've held onto this deep passion of mine as I'm always trying to solve problems. 
+   </div>
 
     <section class="hidden">
         <h3 class="para">
@@ -34,10 +56,10 @@
     <section class="hidden">
         <h2>Contact Me!</h2>
         <ul>
-            <li>Instagram</li>
-            <li>LinkedIn</li>
-            <li>GitHub</li>
+            <li><a href="https://www.instagram.com/anirxdhp/">Instagram</a></li>
+            <li><a href="https://www.linkedin.com/in/anirudh-pottammal-01b186216/">LinkedIn</a></li>
+            <li><a href="https://github.com/anirudhp15">Github</a></li>
         </ul>
     </section>
 
-</body>
+</body
